[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.27", features = ["bundled"] }
bitcoincore-rpc = "0.16"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"